# textual-pandas-templates

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: dashboard.py  data.csv  filter.py  sortable.py  table.py  table.tcss
src/examples/: textpanda.py
src/textual_pandas/: widgets.py
src/textual_pandas/widgets/: filter.py  table.py
